fix likes on firefox

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -113,7 +113,7 @@ footer {
 	width: 100%;
 }
 
-#favorite {
+#favoriteit {
 	width: 33px;
 	height: 33px;
 }
